# Prismata

./: CMakeLists.txt  README.md
imgui/: imgui.cpp  imgui.hpp  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_internal.hpp  imgui_tables.cpp  imgui_widgets.cpp  imstb_truetype.h  imstb_truetype.hpp
imgui/backends/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx11.hpp  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_impl_win32.hpp
implot/: implot.cpp  implot.hpp  implot_demo.cpp  implot_internal.hpp  implot_items.cpp
src/: App.cpp  App.hpp  App_D3D.cpp  App_Globals.cpp  App_Globals.hpp  App_WndProc.cpp  App_old.cpp  Creature.h  Creature.hpp  DataRecorder.h  DataRecorder.hpp  Documentation.md  Genome.h  Genome.hpp  Math.h  Needs.h  RNG.h  RNG.hpp  Renderer.cpp  Renderer.h  SimUI.cpp  SimUI.h  SimUI.hpp  World.cpp  World.h  World.hpp  World_Entities.cpp  World_Gen.cpp  World_Save_and_Load.cpp  World_Species.cpp  World_Terrain.cpp  World_Tick.cpp  creature.h  data_recorder.h  genome.h  main.cpp  needs.h  renderer.cpp  renderer.h  rng.h  (+4 more)
src/App/: App.cpp  App.hpp  App_D3D.cpp  App_Globals.cpp  App_Globals.hpp  App_Globals_Planet.hpp  App_WndProc.cpp
src/Core/: Math.hpp  Planet_Surface.hpp  file_management.hpp
src/Renderer/: Renderer.h  Renderer.hpp  Renderer_Camera.cpp  Renderer_Creatures.cpp  Renderer_Frame.cpp  Renderer_Init.cpp  Renderer_Overlays.cpp  Renderer_Shaders.h  Renderer_Shaders.hpp  Renderer_Terrain.cpp  Renderer_planets.cpp  Shaders_HLSL.hpp
src/Renderer/Planet/: PlanetNoise.hpp  PlanetQuadTree.cpp  PlanetQuadTree.hpp  PlanetRenderer.cpp  PlanetRenderer.hpp  PlanetShaders.hpp  PlanetTextureLoader.hpp
src/Shaders/: Creature.hlsl  Planet.hlsl  PlanetAtmo.hlsl  Simple.hlsl  Star.hlsl  Sun.hlsl
src/Sim/: Creature.cpp  Creature.hpp  DataRecorder.hpp  Genome.hpp  Needs.hpp
src/UI/: Notifications.cpp  SimUI.cpp  SimUI.hpp
src/World/: World.hpp  World_Entities.cpp  World_Gen.cpp  World_IO.cpp  World_Perceive.cpp  World_Planet.cpp  World_Planet.hpp  World_Terrain.cpp  World_Tick.cpp
